--- a/src/app/pages/explore/explore.page.html
+++ b/src/app/pages/explore/explore.page.html
@@ -1,5 +1,5 @@
 <ion-header class="ion-no-border">
-    <ion-toolbar color="light">
+    <ion-toolbar color="danger">
       <ion-title>Catégories</ion-title>
     </ion-toolbar>
   </ion-header>
@@ -10,7 +10,7 @@
       <div class="explore-card">
         <h1 class="explore-title">Explorer</h1>
         
-        <div class="category-grid">
+        <!-- <div class="category-grid">
           <div class="category-item" *ngFor="let category of categories" [routerLink]="category.route">
             <div class="category-image" [style.background-image]="'url(' + category.image + ')'">
               <div class="category-overlay">
@@ -18,7 +18,25 @@
               </div>
             </div>
           </div>
+        </div> -->
+        <div class="category-grid">
+          <ng-container *ngFor="let category of categories; let i = index">
+            <div
+              class="category-item"
+              [routerLink]="category.route"
+              [ngClass]="{
+                'full-width-centered': categories.length % 2 === 1 && i === categories.length - 1
+              }"
+            >
+              <div class="category-image" [style.background-image]="'url(' + category.image + ')'">
+                <div class="category-overlay">
+                  <span class="category-name">{{ category.name }}</span>
+                </div>
+              </div>
+            </div>
+          </ng-container>
         </div>
+        
       </div>
     </div></div>
   </ion-content>
