--- a/src/app/pages/map-modal/map-modal.page.html
+++ b/src/app/pages/map-modal/map-modal.page.html
@@ -24,7 +24,7 @@
         
         <!-- Boutons actions -->
         <div class="action-buttons">
-          <ion-button expand="block" color="danger" (click)="openInGoogleMaps(enseigne)" class="action-button">
+          <ion-button expand="block" color="danger" (click)="openInGoogleMaps(enseigne.adresse)" class="action-button">
             <ion-icon name="navigate" slot="start"></ion-icon>
             Y aller
           </ion-button>
