--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -52,12 +52,13 @@
   }
   
   ion-icon {
-    font-size: 24px;
+    font-size: 22px;
     margin-bottom: 4px;
   }
   
   ion-label {
-    font-size: 12px;
+    font-size: 10px;
+    font-weight: bold;
   }
 }
 
