--- a/src/app/pages/categories/categories.page.html
+++ b/src/app/pages/categories/categories.page.html
@@ -10,7 +10,7 @@
     <div class="explore-card">
       <div class="category-grid">
         <ng-container *ngFor="let category of categories; let i = index">
-          <div class="category-item" 
+          <!-- <div class="category-item" 
                [routerLink]="category.route"
                [ngClass]="getCategoryClasses(i)">
             <div class="category-image" [style.background-image]="'url(' + category.image + ')'">
@@ -18,7 +18,18 @@
                 <span class="category-name">{{ category.name }}</span>
               </div>
             </div>
-          </div>
+          </div> -->
+          <div class="category-item"
+          [routerLink]="category.route"
+          [class.full-width-centered]="categories.length % 2 === 1 && i === 0"
+          [ngStyle]="{'box-shadow': category.color ? '0 6px 12px ' + category.color : '0 6px 12px rgba(0,0,0,0.15)'}">
+     
+            <div class="category-image" [style.background-image]="'url(' + category.image + ')'">
+              <div class="category-overlay">
+                <span class="category-name">{{ category.name }}</span>
+              </div>
+            </div>
+          </div>          
         </ng-container>
       </div>
     </div>
