--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -1,12 +1,24 @@
 ion-header {
   ion-toolbar {
-    --background: #f2f2f2;
+    --background: #b22222;
   }
   
   ion-title {
-    font-size: 16px;
-    color: #666;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
   }
+}
+
+ion-alert.custom-alert-class {
+  --background: #fff;
+  --color: #000;
+  --button-color: #3880ff;
+  --backdrop-opacity: 0.4;
+}
+
+.ion-overlay-wrapper {
+  background-color: #fff;
 }
 
 .profile-container {
@@ -57,17 +69,43 @@ ion-item p {
   margin-top: 5px;
 }
 
-.profile-card {
-  background-color: white;
-  border-radius: 16px;
-  padding: 20px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-  margin-top: 10px;
+.full-center-mobile {
+  // Par défaut (desktop, tablette...), ne centre pas
+  display: block;
+  height: auto;
+  width: 100%;
+
+  // Activer centrage uniquement sur petits écrans
+  @media (max-width: 767px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    margin-top: -50px;
+  }
 }
+
+  .profile-card {
+    margin-top: 30px;
+    background-color: white;
+    border-radius: 16px;
+    padding: 20px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+    width: 100%;
+    max-width: 400px; // Par défaut, mobile
+  
+    @media (min-width: 768px) {
+      max-width: 600px; // Sur écran plus large
+    }
+  
+    @media (min-width: 1200px) {
+      max-width: 100%; // Sur très grand écran
+    }
+  }
 
 .profile-activity {
   font-size: 14px;
-  color: #666;
+  color: #b22222;
   margin: 0;
 }
 
