--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -9,67 +9,115 @@
           <ion-card-title color="danger">S'inscrire dans le Krab's</ion-card-title>
         </div>
 
-        <form (submit)="register()">
+        <form #form="ngForm" (submit)="register()">
+          <!-- Nom -->
           <ion-item class="input-box">
             <ion-input label="Nom" labelPlacement="floating" type="text" [(ngModel)]="userData.nom" name="nom" required></ion-input>
           </ion-item>
 
+          <!-- Prénom -->
           <ion-item class="input-box">
             <ion-input label="Prénom" labelPlacement="floating" type="text" [(ngModel)]="userData.prenom" name="prenom" required></ion-input>
           </ion-item>
 
+          <!-- Email -->
           <ion-item class="input-box">
-            <ion-input label="Email" labelPlacement="floating" type="email" [(ngModel)]="userData.email" name="email" required></ion-input>
+            <ion-input label="Email" labelPlacement="floating" type="email"
+                       [(ngModel)]="userData.email"
+                       name="email"
+                       required
+                       (ngModelChange)="validateFormLive()">
+            </ion-input>
+          </ion-item>
+          <div class="error-message" *ngIf="emailInvalid && userData.email.length > 0">
+            Adresse email invalide
+          </div>
+
+          <!-- Confirmer Email -->
+          <ion-item class="input-box">
+            <ion-input label="Confirmer l'email" labelPlacement="floating" type="email"
+                       [(ngModel)]="confirmEmail"
+                       name="confirmEmail"
+                       required
+                       (ngModelChange)="validateFormLive()">
+            </ion-input>
+          </ion-item>
+          <div class="error-message" *ngIf="emailMismatch">
+            Les adresses email ne correspondent pas
+          </div>
+
+          <!-- Mot de passe -->
+          <ion-item class="input-box">
+            <ion-input label="Mot de passe" labelPlacement="floating" type="password"
+                       [(ngModel)]="userData.password"
+                       name="password"
+                       required
+                       (ngModelChange)="validateFormLive()">
+            </ion-input>
+          </ion-item>
+          <div class="error-message" *ngIf="passwordInvalid">
+            Le mot de passe doit contenir au moins 6 caractères
+          </div>
+
+          <!-- Confirmer mot de passe -->
+          <ion-item class="input-box">
+            <ion-input label="Confirmer le mot de passe" labelPlacement="floating" type="password"
+                       [(ngModel)]="confirmPassword"
+                       name="confirmPassword"
+                       required
+                       (ngModelChange)="validateFormLive()">
+            </ion-input>
+          </ion-item>
+          <div class="error-message" *ngIf="passwordMismatch">
+            Les mots de passe ne correspondent pas
+          </div>
+
+          <!-- Ville -->
+          <ion-item class="input-box">
+            <ion-input label="Ville" labelPlacement="floating" type="text"
+                       [(ngModel)]="userData.ville" name="ville" required>
+            </ion-input>
           </ion-item>
 
           <ion-item class="input-box">
-            <ion-input label="Mot de passe" labelPlacement="floating" type="password" [(ngModel)]="userData.password" name="password" required></ion-input>
-          </ion-item>
+  <ion-input label="Code Postal" labelPlacement="floating"
+             type="tel"
+             [(ngModel)]="userData.codePostal"
+             name="codePostal"
+             required
+             inputmode="numeric"
+             pattern="[0-9]*">
+  </ion-input>
+</ion-item>
 
-          <ion-item class="input-box">
-            <ion-input label="Ville" labelPlacement="floating" type="text" [(ngModel)]="userData.ville" name="ville" required></ion-input>
-          </ion-item>
-
-          <ion-item class="input-box">
-            <ion-input label="Code Postal" labelPlacement="floating" type="text" [(ngModel)]="userData.codePostal" name="codePostal" required></ion-input>
-          </ion-item>
-
-          <!-- Message d'erreur -->
+          <!-- Message d'erreur général -->
           <div *ngIf="errorMessage" class="error-message">
             {{ errorMessage }}
           </div>
 
+          <!-- Lien vers connexion -->
           <div class="forgot-password">
-            <span>Déjà inscrit ? <a href="login" >Se connecter</a></span>
+            <span>Déjà inscrit ? <a href="login">Se connecter</a></span>
           </div>
-          
+
+          <!-- Bouton d'inscription -->
           <ion-button expand="block" class="login-button" type="submit" color="danger" [disabled]="isSubmitting">
             S'inscrire
           </ion-button>
         </form>
 
+        <!-- Séparateur -->
         <div class="divider">
           <hr class="line" />
           <span>Ou s'inscrire avec</span>
           <hr class="line" />
         </div>
 
+        <!-- Bouton Google -->
         <div class="social-buttons">
-          <ion-button expand="block" color="secondary" class="facebook-button">
-            <ion-icon name="logo-facebook"></ion-icon>
-            acebook
-          </ion-button>
-
           <ion-button expand="block" color="medium" class="google-button">
             <ion-icon name="logo-google"></ion-icon>
-            oogle
-          </ion-button>
-        </div>
-
-        <div class="social-buttons">
-          <ion-button color="light" fill="solid" class="apple-button">
-            <ion-icon name="logo-apple"></ion-icon>
-             Apple
+            Google
           </ion-button>
         </div>
 
