--- a/src/app/pages/register/register.page.scss
+++ b/src/app/pages/register/register.page.scss
@@ -4,42 +4,44 @@ $secondary-color: #f4f4f4;
 $border-color: #e0e0e0;
 $text-color: #333;
 
+// Fond de page
 ion-content {
   --background: $secondary-color;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+  padding: 16px;
 }
 
-// Utilitaire pour centrer le contenu
-.flex-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  height: 100%;
+// Conteneur centré et fluide
+.login-container {
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto; // centrage horizontal
+  padding: 16px;
 }
 
 // Carte principale avec bord arrondi et ombre
 .login-card {
   width: 100%;
-  max-width: 500px;
   border-radius: 15px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-// Logo
 .logo-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  align-items: center; // Centre verticalement
+  justify-content: center; // Centre horizontalement la ligne complète
+  gap: 10px; // Espacement entre le logo et le titre
   margin-bottom: 30px;
+  flex-direction: row; // Assure l'affichage en ligne
   
   .logo {
-    width: 128px;
-    height: 128px;
-    margin-right: 15px;
+    width: 40px;
+    height: 40px;
+  }
+
+  ion-card-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: $primary-color; // Couleur du titre
   }
 }
 
@@ -56,7 +58,7 @@ ion-content {
   justify-content: center;
   margin-top: 10px;
   margin-bottom: 30px;
-  
+
   a {
     color: #0056b3;
     font-size: 0.9rem;
@@ -66,7 +68,7 @@ ion-content {
   }
 }
 
-// Bouton de connexion
+// Bouton d'inscription
 .login-button {
   color: #fff;
   font-weight: bold;
@@ -82,7 +84,7 @@ ion-content {
   margin: 1.5rem 0;
   color: $text-color;
   font-size: 0.9rem;
-  
+
   .line {
     flex-grow: 1;
     height: 1px;
@@ -97,7 +99,7 @@ ion-content {
   gap: 20px;
   justify-content: center;
   margin-bottom: 10px;
-  
+
   .facebook-button, .google-button {
     border-radius: 8px;
     width: 100%;
