--- a/src/global.scss
+++ b/src/global.scss
@@ -44,3 +44,10 @@
 ion-modal{
     --background : #ffff;
 }
+
+ion-alert.custom-alert-class {
+  --background: #ffffff !important;
+  --color: #000000 !important;
+  --button-color: #d00000;
+  --backdrop-opacity: 0.4;
+}
