--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
+<app-loader></app-loader>
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
-  <app-navbar></app-navbar>
+  <app-navbar *ngIf="showNavbar()"></app-navbar>
 </ion-app>
