fin test vercel et modif register

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -6,7 +6,7 @@
 
         <div class="logo-container flex-center">
           <img src="assets/logo.png" alt="Le Krab's" class="logo" />
-          <ion-card-title color="danger"> Le Karab'sssss </ion-card-title>
+          <ion-card-title color="danger"> Le Karab's </ion-card-title>
         </div>
 
         <form (ngSubmit)="login()">
