update home component

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<ion-header class="mobile-welcome-header karabs-header">
+<ion-header class="ion-no-border karabs-header">
   <div class="welcome-container">
     <img src="assets/logo.png" alt="Karabs Logo" class="karabs-logo" />
     <span class="welcome-text">Bienvenue dans l'accueil du Karabs</span>
