update home component 2

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,10 @@
 <ion-header class="ion-no-border karabs-header">
+  <ion-toolbar color="danger">
   <div class="welcome-container">
     <img src="assets/logo.png" alt="Karabs Logo" class="karabs-logo" />
     <span class="welcome-text">Bienvenue dans l'accueil du Karabs</span>
   </div>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
